--- a/app/style/index.css
+++ b/app/style/index.css
@@ -1,4 +1,10 @@
+:root {
+    --tile-size: 48px;
+}
+
 body, p, h1, h2, h3, h4, h5, h6, span, div {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     font-size: 12pt;
@@ -12,3 +18,7 @@ b, strong {
 i, emph {
     font-style: italic;
 }
+
+@import './background.css';
+@import './layout.css';
+@import './nav.css';
