--- a/app/style/layout.css
+++ b/app/style/layout.css
@@ -22,6 +22,9 @@
 
 .layout__logo {
     grid-area: logo;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .layout__header {
